--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
+appdirs==1.4.3
+autolink==0.1.2
+beautifulsoup4==4.8.1
 cachetools==3.1.0
 certifi==2019.3.9
 chardet==3.0.4
+cssselect==1.1.0
+emoji==0.5.4
+feedfinder2==0.0.4
+feedparser==5.2.1
 google-api-core==1.10.0
 google-api-python-client==1.7.8
 google-auth==1.6.3
@@ -12,15 +19,27 @@ google-resumable-media==0.3.2
 googleapis-common-protos==1.5.10
 httplib2==0.12.3
 idna==2.8
+jieba3k==0.35.1
+lxml==4.4.1
+newspaper3k==0.2.8
+nltk==3.4.5
 Pillow==6.0.0
 protobuf==3.7.1
 pyasn1==0.4.5
 pyasn1-modules==0.2.5
+python-dateutil==2.8.0
 pytz==2019.1
+PyYAML==5.1.2
 requests==2.21.0
+requests-file==1.4.3
 rsa==4.0
 six==1.12.0
+soupsieve==1.9.4
+tinysegmenter==0.3
+tldextract==2.2.1
+Unidecode==1.1.1
 uritemplate==3.0.0
+uritools==2.2.0
+urlextract==0.13.0
 urllib3==1.24.3
 virtualenv==16.5.0
-
